--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -24,7 +24,8 @@
             </intent-filter>
         </activity>
         
-          <activity android:name=".SelectActivity"/>
+          <activity android:name=".SelectActivity"
+              android:screenOrientation="landscape"/>
     </application>
 
     <uses-permission android:name="android.permission.INTERNET" />
